# liblikedimion

./: .gitignore  CMakeLists.txt  Doxyfile  build.sh
.github/workflows/: static.yml
src/: liblikedimion.cpp
